# Marbles

./: .envrc  .gitignore  CGLRender.cpp  CGLRender.h  CGame.cpp  CGame.h  CGameObject.cpp  CGameObject.h  CInputManager.cpp  CInputManager.h  CMakeLists.txt  CMarble.cpp  CMarble.h  CObjectManager.cpp  CObjectManager.h  CTimer.cpp  CTimer.h  CVector3.cpp  CVector3.h  Makefile  Marbles.sln  Marbles.vcproj  ODEManager.cpp  ODEManager.h  ObjectFactory.h  README.md  ROADMAP.md  Singleton.h  SoundManager.cpp  SoundManager.h  Thumbs.db  build-linux.sh  build-windows.sh  build.zig  flake.nix  main.cpp  setup.sh  util.cpp
Debug/: BuildLog.htm  vc70.idb
cmake/: toolchain-mingw-w64.cmake
docs/: GAMEPLAY_VISION.md  LIBRARY_DECISIONS.md  NEXT_SESSION.md  phase2-rendering-guide.md
docs/sessions/: 001-resurrection-and-foundation.md  002-cross-platform-build-system.md  003-rebranding-and-priorities.md  004-zig-migration.md  005-core-rendering.md  006-triangle-rendering.md  007-transformations.md  008-architecture-refactor.md  README.md
museum/: CGLRender.cpp  CGLRender.h  CGame.cpp  CGame.h  CGameObject.cpp  CGameObject.h  CInputManager.cpp  CInputManager.h  CMarble.cpp  CMarble.h  CObjectManager.cpp  CObjectManager.h  CTimer.cpp  CTimer.h  CVector3.cpp  CVector3.h  MacroRepeat.h  Marbles.ncb  Marbles.sln  Marbles.vcproj  ODEManager.cpp  ODEManager.h  ObjectFactory.h  Singleton.h  SoundManager.cpp  SoundManager.h  fmodvc.lib  main.cpp  util.cpp  util.h
museum/Debug/: BuildLog.htm
src/: main.cpp  main.zig  math.zig  types.zig  vulkan_init.zig  vulkan_render.zig
src/shaders/: triangle.vert  triangle.vert.spv
textures/: Thumbs.db
